--- a/views/blog/catalogue.ejs
+++ b/views/blog/catalogue.ejs
@@ -18,11 +18,9 @@
     <div id="title"></div>
 <div id="content">
     <p class="pt70">开始添加新的日志>></p>
-    <input type="button" class="pl20 pr20 pt5 pb5 wheat add " value="添加" id="addBlog" />
+    <input type="button" class="btn btn-primary fr " value="添加" id="addBlog" />
     <div class="clear"></div>
-    <hr />
     <p class="pt70">最近更新的日志</p>
-     <hr />
     <ul class="ul">
         <% titles.forEach(function(title){ %>
         <% title = JSON.parse(title) %>
