--- a/views/blog/showContentDetail.ejs
+++ b/views/blog/showContentDetail.ejs
@@ -19,7 +19,7 @@
     </div>
     <div id="htmlDate"  class="hide"><%=htmlDate%></div>
     <div id="show"></div>
-    <input value="返回" onclick="javascript:window.history.go(-1)" type="button" class="pl20 pr20 pt5 pb5 wheat ml20 mau"/>
+    <input value="返回" onclick="javascript:window.history.go(-1)" type="button" class="btn btn-info mau"/>
 </body>
 <% include ../footer.ejs %>
 <script>
