--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
       <h1 class="firstBody">Hi,</h1>
       <p class="firstBody">Welcome to <%= title %>, let's go!</p>
     </div>
-    <%if(locals.user){ %>
-      <p><a href="/saveInfo">去写信息吧</a> </p>
-      <% } %>
+    <!--<%if(locals.user){ %>-->
+      <!--<p><a href="/saveInfo">去写信息吧</a> </p>-->
+      <!--<% } %>-->
   </body>
 </html>
