--- a/views/blog/addBlog.ejs
+++ b/views/blog/addBlog.ejs
@@ -17,30 +17,31 @@
         <li><a href="/catalogue">档案&nbsp;</a>»&nbsp;</li>
         <li>书写日志</li>
     </div>
-    <div class="title" >
-        <input id="title" placeholder="请输入题目"/>
-    </div>
-    <div id="write" class="write">
-        <textarea name="writeIn" id="writeIn" wrap="hard" rows="10" cols="30"></textarea>
-        <div id="myBut">
-            <input id="writeCode" type="button" class="pl20 pr20 pt5 pb5 wheat writeCode" value="写代码"/>
-
-            <input id="preRead" type="button" class="pl20 pr20 pt5 pb5 wheat add ml20" value="预览"/>
+    <form class="form-search">
+        <div class="title" >
+            <input id="title" class=" search-query bnone " required placeholder="请输入题目"/>
+            <span class="help-inline">*</span>
         </div>
-
-    </div>
+        <div id="write" class="write">
+            <textarea name="writeIn" id="writeIn" wrap="hard" rows="10" cols="30"></textarea>
+            <div id="myBut">
+                <input id="writeCode" type="button" class=" btn btn-info writeCode" value="写代码"/>
+                <input id="preRead" type="button" class="fr btn btn-info" value="预览"/>
+            </div>
+        </div>
+    </form>
     <div id="show" ></div>
     <div class="w700 h300 bcw hide" id="code">
         <div id="codeContent" class="h260">
-            <textarea name="writeCodeValue" id="writeCodeValue" class="w h noResize" wrap="hard" rows="10" cols="30"></textarea>
+            <textarea name="writeCodeValue" id="writeCodeValue" class=" noResize" wrap="hard" rows="10" cols="30"></textarea>
         </div>
         <div class="myButton">
-            <input id="confirm" type="button" class="pl20 pr20 pt5 pb5 wheat " value="确定" />
-            <input id="quit" type="button"  class="pl20 pr20 pt5 pb5 wheat " value="取消" />
+            <input id="confirm" type="button" class="btn btn-info" value="确定" />
+            <input id="quit" type="button"  class="btn btn-info" value="取消" />
         </div>
     </div>
     <div class="tc">
-        <input id="save" type="button" class="hide pl20 pr20 pt5 pb5 wheat add ml20" value="保存"/>
+        <input id="save" type="button" class="hide btn btn-info" value="保存"/>
     </div>
 </body>
 <% include ../footer.ejs %>
@@ -50,7 +51,7 @@
 <script type="text/x-jsrender" id="baseMassage">
     <div id="MyTitle">{{:title}}</div>
     <p id="author" class="mt10 c787CA8">iS Defined By {{:author}}</p>
-    <p id="time" class="mt10 c787CA8">{{:currentTime}}</p><hr/>
+    <p id="time" class="mt10 c787CA8 border-col">{{:currentTime}}</p>
 
 </script>
 <script type="text/x-jsrender" id="valueMassage">
