--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,3 +1,4 @@
 <link rel='stylesheet' href='/stylesheets/base.css' />
+<link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
 <link rel='stylesheet' href='/stylesheets/animate.min.css' />
 <link rel='stylesheet' href='/javascripts/layer/skin/layer.css' />
