--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -15,11 +15,11 @@
         <fieldset>
             <legend class="white">登陆</legend>
             <div class="control-group input-prepend">
-                <span class="add-on">用户名</span>
+                <span class="add-on"><i class="icon-user"></i> 用户名</span>
                 <input type="text"  name="userName" placeholder="ID"/>
             </div><br/>
             <div class="control-group input-prepend">
-                <span class="add-on">密码：</span>
+                <span class="add-on"><i class="icon-lock"></i> 密码：</span>
                 <input type="password" name='userPassword' placeholder="password"/>
             </div>
             <div><input class="reg btn btn-success" type="submit" value="登陆"/></div>
