--- a/views/login/register.ejs
+++ b/views/login/register.ejs
@@ -12,11 +12,11 @@
               <fieldset>
                   <legend class="white">注册</legend>
                   <div class="input-prepend control-group">
-                      <span class="add-on ">用户名</span>
+                      <span class="add-on "><i class="icon-user"></i> 用户名</span>
                       <input class="" type="text" name="userName" placeholder="ID"/>
                   </div><br/>
                   <div class="input-prepend control-group">
-                      <span class="add-on ">密码：</span>
+                      <span class="add-on "><i class="icon-lock"></i> 密码：</span>
                       <input class="" type="password" name='userPassword' placeholder="password"/>
                   </div>
                   <div><input class=" btn btn-success" type="submit" value="注册"/></div>
