--- a/views/blog/addBlog.ejs
+++ b/views/blog/addBlog.ejs
@@ -25,23 +25,27 @@
         <div id="write" class="write">
             <textarea name="writeIn" id="writeIn" wrap="hard" rows="10" cols="30"></textarea>
             <div id="myBut">
-                <input id="writeCode" type="button" class=" btn btn-info writeCode" value="写代码"/>
-                <input id="preRead" type="button" class="fr btn btn-info" value="预览"/>
+                <input type="button" class=" btn btn-primary writeCode" data-toggle ="modal" data-target="#code" value="写代码"/>
+                <input id="preRead" type="button" class="fr btn btn-primary" value="预览"/>
             </div>
         </div>
     </form>
     <div id="show" ></div>
-    <div class="w700 h300 bcw hide" id="code">
-        <div id="codeContent" class="h260">
+    <div class="modal fade hide" id="code">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+            <h4 id="myModalLabel">写代码</h4>
+        </div>
+        <div id="codeContent" class="modal-body">
             <textarea name="writeCodeValue" id="writeCodeValue" class=" noResize" wrap="hard" rows="10" cols="30"></textarea>
         </div>
-        <div class="myButton">
-            <input id="confirm" type="button" class="btn btn-info" value="确定" />
-            <input id="quit" type="button"  class="btn btn-info" value="取消" />
+        <div class="myButton modal-footer">
+            <input id="confirm" type="button" class="btn btn-primary" data-dismiss="modal" value="确定" />
+            <input id="quit" type="button"  class="btn btn-primary " data-dismiss="modal" aria-hidden="true" value="取消" />
         </div>
     </div>
     <div class="tc">
-        <input id="save" type="button" class="hide btn btn-info" value="保存"/>
+        <input id="save" type="button" class="hide btn btn-primary"  value="保存"/>
     </div>
 </body>
 <% include ../footer.ejs %>
