--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -13,6 +13,9 @@ form{
 form p{
 	margin-top: 20px;
 }
+form label{
+    text-align: left;
+}
 form legend{
     padding-top: 50px;
     margin-bottom: 50px;
