--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -23,7 +23,8 @@
                 <input type="password" name='userPassword' placeholder="password"/>
             </div>
             <div><input class="reg btn btn-success" type="submit" value="登陆"/></div>
-            <p class="tl pl20 pt50"><a  href="./register" />还没有账号，去注册>> </a></p>
+            <label class="checkbox white pl20" for="remember">是否记住密码<input  type="checkbox" name="remember" id="remember" value="1"/></label>
+            <p class="tl pl20 "><a href="./register">还没有账号，去注册>></a></p>
         </fieldset>
       </form>
       <% include ../message %>
