--- a/public/sass/test.scss
+++ b/public/sass/test.scss
@@ -2,9 +2,9 @@
 $bule:#1875e7;
 $side:left;
 $titalWidth:800px;
-$color:#ffffff;
+$color:#d3d3d3;
 div{
-  color: $bule;
+  color: $color ;
 }
 //如果变量需要镶嵌在字符串之中，就必须需要写在#{}之中。
 
